v0.5.0/_sources/gallery/images/image.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/images/image.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_images_image.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_images_image.py:


Images on figures
-----------------
The :meth:`pygmt.Figure.image` method can be used to read and place an image
file in many formats (e.g., png, jpg, eps, pdf) on a figure. We must specify
the filename via the ``imagefile`` parameter or simply use the filename as
the first argument. You can also use a full URL pointing to your desired image.
The ``position`` parameter allows us to set a reference point on the map for
the image.

.. GENERATED FROM PYTHON SOURCE LINES 11-31



.. image-sg:: /gallery/images/images/sphx_glr_image_001.png
   :alt: image
   :srcset: /gallery/images/images/sphx_glr_image_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import os

    import pygmt

    fig = pygmt.Figure()
    fig.basemap(region=[0, 2, 0, 2], projection="X10c", frame=True)

    # place and center the GMT logo from the GMT website to the position 1/1
    # on a basemap, scaled up to be 3 cm wide and draw a rectangular border
    # around the image
    fig.image(
        imagefile="https://www.generic-mapping-tools.org/_static/gmt-logo.png",
        position="g1/1+w3c+jCM",
        box=True,
    )

    # clean up the downloaded image in the current directory
    os.remove("gmt-logo.png")

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.089 seconds)


.. _sphx_glr_download_gallery_images_image.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: image.py <image.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: image.ipynb <image.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
